<resources>
    <string name="app_name">Lab_8</string>
    <string name="hello_message">Hello World!</string>
    <string name="button_text">I\'m a button!</string>
    <string name="title_lab">Lab_8</string>
    <!--Added Lab 2-->
    <string name="login_title">Login</string>
    <string name="login_name">login name</string>
    <string name="login_password">Password</string>
    <string name="login_password_lc">password</string>
    <string name="title_activity_list_items">ListItemsActivity</string>
    <string name="button_1">Button 1</string>
    <string name="button_2">Button 2</string>
    <string name="switch_1">Enable Something</string>
    <string name="login_default">email@domain.com</string>
    <string name="login_string"></string>
    <string name="login_button">Login</string>
    <!--Added Lab 3-->
    <string name="switch_on">Switch is On</string>
    <string name="switch_off">Switch is Off</string>
    <string name="response">Here\'s some junk!</string>
    <string name="dialog_message">Would you like to finish the Activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <!--Added Lab 4-->
    <string name="startChat">Start Chat</string>
    <string name="send">Send</string>
    <!--Added Lab 5-->
    <!--Added Lab 6-->
    <string name="startWeather">Weather Forecast</string>
    <string name="currentText">Current Temperature</string>
    <string name="maxText">Max:</string>
    <string name="minText">Min:</string>
    <string name="title_message_list">Messages</string>
    <string name="title_message_detail">Message Detail</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!--Added Lab 7-->
    <!--Added Lab 8-->
    <string name="toolbar_start">Toolbar</string>
    <string name="toolbar_snack_one">You\'ve selected item one</string>
    <string name="toolbar_snack_fab">This button does nothing hahaha</string>
    <string name="toolbar_dialog">Do you want to go back?</string>
    <string name="toolbar_dialog_ok">Affirmative</string>
    <string name="toolbar_dialog_cancel">Negative</string>
    <string name="toolbar_dialog_message">Type Message Here</string>




</resources>
