<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.eberhard.cst2335_labs.ListItemsActivity"
    android:background="@color/colorBackground"
    android:columnCount="2"
    android:rowCount="2"
    android:orientation="vertical"
    android:useDefaultMargins="true"
    android:visibility="visible"
    android:textAlignment="center"
    android:rowOrderPreserved="true"
    android:columnOrderPreserved="true"
    android:alignmentMode="alignMargins"
    android:paddingBottom="@dimen/activity_vertical_margin">


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_2"
        android:id="@+id/checkBox"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:padding="25dp" />

    <Switch
        android:layout_height="wrap_content"
        android:text="@string/switch_1"
        android:id="@+id/switch1"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center|fill"
        android:checked="false"
        android:layout_width="wrap_content"
        android:switchPadding="10dp"
        android:padding="25dp" />

    <ImageButton
        android:layout_height="120dp"
        android:id="@+id/imageButton"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@android:drawable/btn_star_big_on"
        android:contentDescription="star"
        android:nestedScrollingEnabled="true"
        android:layout_gravity="center"
        android:layout_width="120dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_1"
        android:id="@+id/radioButton"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center"
        android:padding="25dp" />
</GridLayout>