<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.eberhard.cst2335_labs.WeatherForecast">

    <TextView
        android:text="@string/currentText"
        android:textSize="@dimen/current_weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/currentText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp" />

    <TextView
        android:text="_"
        android:textSize="@dimen/current_weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:id="@+id/currentTemp"
        android:layout_below="@+id/currentText"
        android:layout_centerHorizontal="true" />


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="0"
        android:textSize="@dimen/weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minTemp"
        android:layout_alignBaseline="@+id/minText"
        android:layout_alignBottom="@+id/minText"
        android:layout_alignStart="@+id/maxTemp" />

    <TextView
        android:text="@string/maxText"
        android:textSize="@dimen/weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxText"
        android:layout_below="@+id/currentTemp"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginStart="19dp"
        android:layout_marginTop="27dp" />

    <TextView
        android:text="0"
        android:textSize="@dimen/weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxTemp"
        android:layout_alignBaseline="@+id/maxText"
        android:layout_alignBottom="@+id/maxText"
        android:layout_alignEnd="@+id/currentTemp" />

    <TextView
        android:text="@string/minText"
        android:textSize="@dimen/weather_font"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minText"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/maxTemp"
        android:layout_alignEnd="@+id/maxText" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="?android:attr/selectableItemBackgroundBorderless"
        android:id="@+id/imageView"
        android:minHeight="200dp"
        android:minWidth="200dp"
        android:layout_below="@+id/minText"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
